# sknwpl-meetings

./: .gitignore  README.md  generate_youtube_token.py  meeting.py  pyproject.toml  youtube_links.txt
cluster/: fix_crlf.sh  full_pipeline.py  full_pipeline.sbatch  install_transcription_env.sbatch  install_transcription_env.sh  run_meeting.sh  run_transcription.sh  transcription.sbatch
last-week-in-sknwpl/week_24_30/: 2025-11-28 18-05-45_plain.txt  2025-11-28 18-05-45_transcript.json  2025-11-28 18-05-45_transcript.md  README.md  prompt_01_highlights.txt  prompt_02_summary.txt  youtube_link.txt
resources/templates/: prompts.md
results/meeting_1_2026-01-17/: 2026-01-17 14-06-26_plain.txt  2026-01-17 14-06-26_transcript.json  2026-01-17 14-06-26_transcript.txt  youtube_link.txt
results/meeting_2_2026-01-17/: 2026-01-17 17-09-47_plain.txt  2026-01-17 17-09-47_transcript.json  2026-01-17 17-09-47_transcript.txt  youtube_link.txt
src/: __init__.py
src/llm/: __init__.py  prompt_manager.py
src/scrapers/: __init__.py
src/transcript_tools/: __init__.py  audio_to_video.py  transcription.py  upload_youtube.py
